# copyscan-linux

./: .gitignore  README.md  copyscan-linux.desktop  copyscan_linux.py  kopierer.desktop  kopierer.py  pyproject.toml  start_copyscan-linux.sh  start_kopierer.sh
.github/workflows/: build-appimage.yml
packaging/: copyscan-linux.desktop  kopierer.desktop
